fix text align in responsive mode

--- a/src/styles-index.css
+++ b/src/styles-index.css
@@ -242,4 +242,7 @@ footer .social-links a:hover {
     justify-content: center;
     margin: 0px auto;
   }
+  .left-align {
+    text-align: left;
+  }
 }
